# vcpkg-tank

./: .gitignore  vetur.config.js
backend/: Cargo.toml
backend/src/: main.rs  vcpkg.rs
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: index.html
frontend/src/views/: Home.vue
