[package]
name = "vcpkg-tank"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.0"
actix-web = "4.0.1"
serde = { version="1.0.136", features = ["derive"] }
serde_json = "1.0.79"
validator = { version="0.14.0", features = ["derive"] }
uuid = { version = "1.0.0", features = ["serde", "v4"] }
tokio = { version = "1.17.0", features = ["process"] }
actix = "0.13.0"
